# setupgtest

./: CMakeLists.txt  main.cpp
Tests/: test.cpp  test.h
